Refactor PodSetUtils.mapsToPods to accept directly the PodSet resource
Signed-off-by: Jakub Scholz <www@scholzj.com>